--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,11 +18,81 @@
         android:layout_marginTop="5dp">
     </TextView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_below="@id/market_name"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        app:cardCornerRadius="5dp">
+
+
+
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_below="@id/market_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+
+            android:text="Name"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:maxLines="15"
+            android:textColor="#616161"
+            android:textSize="17sp"
+            android:textStyle="bold">
+        </TextView>
+
+        <TextView
+            android:text="Display"
+            android:layout_width="200dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:textColor="#616161"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            ></TextView>
+
+        <TextView
+            android:text="Store"
+            android:layout_marginLeft="5dp"
+            android:layout_width="200dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:inputType="numberSigned"
+            android:textColor="#616161"
+            android:textSize="17sp"
+            android:textStyle="bold">
+        </TextView>
+
+        <TextView
+            android:text="Total"
+            android:layout_width="200dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:textColor="#616161"
+            android:textSize="17sp"
+            android:textStyle="bold">
+        </TextView>
+
+
+
+    </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/inventory_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/market_name"/>
+        android:layout_below="@+id/card_view"/>
 
     <!-- <TextView
          android:id="@+id/section_label"
