--- a/app/src/main/res/layout/detail_list_item.xml
+++ b/app/src/main/res/layout/detail_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:baselineAligned="false"
+
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -22,9 +22,10 @@
             android:layout_height="44dp"
             android:layout_weight="1"
             android:text="Item"
+            android:gravity=""
             android:maxLines="15"
             android:textColor="#616161"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <EditText
@@ -32,10 +33,11 @@
             android:layout_width="200dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:hint="val 1"
-            android:inputType="numberSigned"
+            android:hint="0"
+            android:gravity=""
+            android:inputType="number"
             android:textColor="#616161"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <EditText
@@ -43,10 +45,10 @@
             android:layout_width="200dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:hint="val 2"
-            android:inputType="numberSigned"
+            android:hint="0"
+            android:inputType="number"
             android:textColor="#616161"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <TextView
@@ -55,8 +57,10 @@
             android:layout_height="44dp"
             android:layout_weight="1"
             android:text="Total"
+
+            android:textAlignment="center"
             android:textColor="#616161"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
 
