--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:orientation="vertical"
     tools:context=".ui.main.PlaceholderFragment">
+
 
     <TextView
         android:id="@+id/market_name"
@@ -15,8 +16,8 @@
         android:textAlignment="center"
         android:hint="Maraket Name"
         android:textSize="20sp"
-        android:layout_marginTop="5dp">
-    </TextView>
+        android:layout_marginTop="5dp"
+        android:visibility="gone"></TextView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -29,62 +30,56 @@
         app:cardCornerRadius="5dp">
 
 
-
-    <LinearLayout
-        android:id="@+id/linear_layout"
-        android:layout_below="@id/market_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <TextView
-
-            android:text="Name"
-            android:layout_width="320dp"
+        <LinearLayout
+            android:id="@+id/linear_layout"
+            android:layout_below="@id/market_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:maxLines="15"
-            android:textColor="#616161"
-            android:textSize="17sp"
-            android:textStyle="bold">
-        </TextView>
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-        <TextView
-            android:text="Display"
-            android:layout_width="200dp"
-            android:layout_height="44dp"
-            android:layout_weight="1"
-            android:textColor="#616161"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            ></TextView>
+            <TextView
 
-        <TextView
-            android:text="Store"
-            android:layout_marginLeft="5dp"
-            android:layout_width="200dp"
-            android:layout_height="44dp"
-            android:layout_weight="1"
-            android:inputType="numberSigned"
-            android:textColor="#616161"
-            android:textSize="17sp"
-            android:textStyle="bold">
-        </TextView>
+                android:text="Name"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLines="15"
+                android:textColor="#616161"
+                android:textSize="17sp"
+                android:textStyle="bold"></TextView>
 
-        <TextView
-            android:text="Total"
-            android:layout_width="200dp"
-            android:layout_height="44dp"
-            android:layout_weight="1"
-            android:textColor="#616161"
-            android:textSize="17sp"
-            android:textStyle="bold">
-        </TextView>
+            <TextView
+                android:text="Display"
+                android:layout_width="200dp"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:textColor="#616161"
+                android:textSize="17sp"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:text="Store"
+                android:layout_marginLeft="5dp"
+                android:layout_width="200dp"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:inputType="numberSigned"
+                android:textColor="#616161"
+                android:textSize="17sp"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:text="Total"
+                android:layout_width="200dp"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:textColor="#616161"
+                android:textSize="17sp"
+                android:textStyle="bold"></TextView>
 
 
-
-    </LinearLayout>
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -92,7 +87,7 @@
         android:id="@+id/inventory_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/card_view"/>
+        android:layout_below="@+id/card_view" />
 
     <!-- <TextView
          android:id="@+id/section_label"
@@ -108,5 +103,4 @@
          tools:layout_constraintTop_creator="1" />-->
 
 
-
-</RelativeLayout>
+</LinearLayout>
